<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Puff Puff</string>

    <string name="attribution_launcher_icon">Launcher icon and icons made/designed by <a href="https://www.flaticon.com/authors/flat-icons-com">Flat-icons-com</a> from www.flaticon.com</string>

    <string name="label_today">Today</string>
    <string name="label_stats">Stats</string>
    <string name="label_journal" tools:ignore="Typos">Journal</string>
    <string name="label_add_toke" tools:ignore="Typos">Add Toke</string>
    <string name="label_edit_toke" tools:ignore="Typos">Edit Toke</string>
    <string name="label_settings">Settings</string>
    <string name="label_dark_theme">Dark Theme</string>
    <string name="label_about">About</string>
    <string name="label_toke_type">Type</string>
    <string name="label_toke_tool">Tool</string>
    <string name="label_toke_strain">Strain</string>

    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="dialog_title_set_next_toke_reminder">Set next Toke reminder</string>
    <string name="dialog_clear_data_description">Permanently delete all your saved data?\n\nWarning: You cannot undo this action.</string>
    <string name="dialog_delete_toke_description">Permanently delete this toke?\n\nWarning: You cannot undo this action.</string>
    <string name="dialog_set_next_toke_reminder_description">Set a countdown timer for how long to wait before being reminded to take another Toke.</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="next_toke">Next Toke</string>
    <string name="fill_in_mins">%s mins</string>

    <string name="zero">0</string>
    <string name="indica">Indica</string>
    <string name="strain_name">Strain Name</string>
    <string name="save">Save</string>
    <string name="today_at">Today at</string>
    <string name="last_toke" tools:ignore="Typos">Last Toke</string>
    <string name="tokes_today">Tokes Today</string>
    <string name="tokes_this_week">Tokes this Week</string>
    <string name="toke_log_screen_empty_list_desc">Nothing to show for today, not yet at least…</string>
    <string name="hybrid">Hybrid</string>
    <string name="sativa">Sativa</string>
    <string name="cbd">CBD</string>

    <string-array name="chronic_type">
        <item>Indica</item>
        <item>Hybrid</item>
        <item>Sativa</item>
        <item>CBD</item>
    </string-array>

    <string-array name="tool_used">
        <item>Joint</item>
        <item>Vape</item>
        <item>WaterBong</item>
        <item>Pipe</item>
        <item>Edible</item>
        <item>Dab</item>
    </string-array>

    <string-array name="next_toke_reminder_values_arr">
        <item>Off</item>
        <item>5 mins</item>
        <item>10 mins</item>
        <item>15 mins</item>
        <item>30 mins</item>
        <item>45 mins </item>
        <item>60 mins</item>
    </string-array>

</resources>
