<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/stats_screen"
        android:enabled="true"
        android:icon="@drawable/menu_item_stats_state_selector"
        android:title="@string/label_stats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/journal_screen"
        android:enabled="true"
        android:icon="@drawable/menu_item_journal_state_selector"
        android:title="@string/label_journal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_screen"
        android:enabled="true"
        android:icon="@drawable/menu_item_settings_state_selector"
        android:title="@string/label_settings"
        app:showAsAction="ifRoom" />

</menu>