<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <!-- Tokes List -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/journal_screen_tokes_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journal_screen_todays_tokes_trend"
                tools:listitem="@layout/item_toke" />

            <!--  Screen Title -->
            <TextView
                android:id="@+id/journal_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/label_today"
                android:textColor="@color/colorPrimaryText"
                android:textSize="38sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Change Date Btn -->
            <ImageView
                android:id="@+id/journal_change_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:src="@drawable/ic_date_range_black_36dp"
                android:tint="@color/colorPrimaryText"
                android:tintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="@+id/journal_screen_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Screen Label Border Bottom -->
            <View
                android:id="@+id/journal_screen_label_border_bottom"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/journal_screen_title"
                app:layout_constraintStart_toStartOf="@+id/journal_screen_title"
                app:layout_constraintTop_toBottomOf="@id/journal_screen_title"
                app:layout_constraintWidth_percent="1" />

            <!-- Tokes Today Label -->
            <TextView
                android:id="@+id/journal_screen_tokes_today_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/tokes_today"
                android:textColor="@color/colorPrimaryTextLabelColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/journal_screen_last_toke_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journal_screen_label_border_bottom" />

            <!-- Tokes Today Total Count -->
            <TextView
                android:id="@+id/journal_screen_todays_toke_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/zero"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/journal_screen_tokes_today_label"
                app:layout_constraintStart_toStartOf="@+id/journal_screen_tokes_today_label"
                app:layout_constraintTop_toBottomOf="@+id/journal_screen_tokes_today_label" />

            <!-- Last Toke Time Label -->
            <TextView
                android:id="@+id/journal_screen_last_toke_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/last_toke"
                android:textColor="@color/colorPrimaryTextLabelColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/journal_screen_next_toke_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/journal_screen_tokes_today_label"
                app:layout_constraintTop_toTopOf="@+id/journal_screen_tokes_today_label" />

            <!-- Last Toke Chronometer Timer -->
            <Chronometer
                android:id="@+id/journal_screen_last_toke_chronometer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/zero"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/journal_screen_last_toke_label"
                app:layout_constraintStart_toStartOf="@+id/journal_screen_last_toke_label"
                app:layout_constraintTop_toBottomOf="@+id/journal_screen_last_toke_label" />

            <!-- Next Toke Time Label -->
            <TextView
                android:id="@+id/journal_screen_next_toke_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/next_toke"
                android:textColor="@color/colorPrimaryTextLabelColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/journal_screen_last_toke_label"
                app:layout_constraintTop_toBottomOf="@+id/journal_screen_label_border_bottom" />

            <!-- Next Toke Chronometer Timer -->
            <Chronometer
                android:id="@+id/journal_screen_next_toke_chronometer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/zero"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/journal_screen_next_toke_label"
                app:layout_constraintStart_toStartOf="@+id/journal_screen_next_toke_label"
                app:layout_constraintTop_toBottomOf="@+id/journal_screen_next_toke_label" />

            <!-- Tokes Today Chart -->
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/journal_screen_todays_tokes_trend"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journal_screen_last_toke_chronometer" />

            <!-- Screen Empty List Msg -->
            <TextView
                android:id="@+id/journal_screen_empty_list_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:gravity="center"
                android:text="@string/toke_log_screen_empty_list_desc"
                android:textColor="@color/colorPrimaryTextLabelColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/journal_screen_tokes_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/journal_screen_todays_tokes_trend" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Add Toke Floating Action Bottom -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/journal_screen_add_toke_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="@color/colorAccent"
        app:fabCustomSize="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:tint="@color/colorPrimary" />
</FrameLayout>