<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <!-- Home Screen Label -->
            <TextView
                android:id="@+id/stats_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/label_stats"
                android:textColor="@color/colorPrimaryText"
                android:textSize="38sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Home Screen Label Border Bottom -->
            <View
                android:id="@+id/stats_screen_label_border_bottom"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/stats_screen_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_screen_title"
                app:layout_constraintWidth_percent="1" />

            <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/stats_screen_weekly_tokes_bar_chart"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    app:layout_constraintWidth_percent="0.85"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_screen_weeks_toke_count"/>

            <!-- Tokes Week Total Label -->
            <TextView
                    android:id="@+id/stats_screen_tokes_week_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/tokes_this_week"
                    android:textColor="@color/colorPrimaryTextLabelColor"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/stats_screen_title"
                    android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Tokes Week Total Count -->
            <TextView
                    android:id="@+id/stats_screen_weeks_toke_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="@+id/stats_screen_tokes_week_label"
                    app:layout_constraintStart_toStartOf="@+id/stats_screen_tokes_week_label"
                    app:layout_constraintTop_toBottomOf="@+id/stats_screen_tokes_week_label" />

            <com.github.mikephil.charting.charts.PieChart
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:id="@+id/stats_screen_weekly_tools_pie_chart"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    app:layout_constraintWidth_percent="0.85"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_screen_weekly_tokes_bar_chart"
                    android:layout_marginTop="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Add Toke Floating Action Bottom -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stats_screen_add_toke_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="@color/colorAccent"
        app:fabCustomSize="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:tint="@color/colorPrimary" />
</FrameLayout>